@@ -21,5 +21,6 @@ pyfll-installer (001-1) unstable; urgency=low
   * su to su-to-root changed 
   * add only neede rows to tableWidget 
   * changed to subprocess
+  * changed to subprocess in callbacks.py 
 
- -- Horst Tritremmel <hjt@sidux.com>  Wed, 23 Apr 2008 14:00:27 +0200
+ -- Horst Tritremmel <hjt@sidux.com>  Wed, 23 Apr 2008 21:15:08 +0200
